DSS Identifier code and embedding AI training code

--- a/src/main/python/services/translation/files/gk_vocab_overrides.json
+++ b/src/main/python/services/translation/files/gk_vocab_overrides.json
@@ -10,13 +10,16 @@
 {"strongsId":"G0932","translation":"kingdom","word":"βασιλεια"}
 {"strongsId":"G1063","translation":"for","word":"γαρ"}
 {"strongsId":"G1096","translation":"come to pass","word":"γενηται"}
+{"strongsId":"G1106","translation":"opinion","word":"γνωμη"}
 {"strongsId":"G1161","translation":"then","word":"δε"}
 {"strongsId":"G1161","translation":"now","word":"δ’"}
 {"strongsId":"G1321","translation":"teaching","word":"διδαξη"}
 {"strongsId":"G1321","translation":"taught","word":"εδιδασκεν"}
+{"strongsId":"G1380","translation":"think","word":"δοκω"}
 {"strongsId":"G1510","translation":"to be","word":"εστιν"}
 {"strongsId":"G1520","translation":"one","word":"μιαν"}
 {"strongsId":"G1646","translation":"least","word":"ελαχιστων"}
+{"strongsId":"G1699","translation":"my","word":"εμην"}
 {"strongsId":"G1785","translation":"commandments","word":"εντολων"}
 {"strongsId":"G2064","translation":"I have come","word":"ηλθον"}
 {"strongsId":"G2523","translation":"having sat down","word":"καθισαντος"}
