--- a/src/main/python/services/translation/files/heb_vocab_lexicon_ancient.json
+++ b/src/main/python/services/translation/files/heb_vocab_lexicon_ancient.json
@@ -4312,6 +4312,7 @@
 {"strongsId":"H5591","root":"שער","translation":"whirlwind"}
 {"strongsId":"H5592","root":"ספ","translation":"door"}
 {"strongsId":"H5594","root":"ספד","translation":"mourn"}
+{"strongsId":"H5594","root":"סופד","translation":"mourner"}
 {"strongsId":"H5595","root":"ספה","translation":"consume"}
 {"strongsId":"H5596","root":"ספח","translation":"put"}
 {"strongsId":"H5596","root":"שפח","translation":"put"}
