--- a/src/main/python/services/translation/files/heb_vocab_overrides.json
+++ b/src/main/python/services/translation/files/heb_vocab_overrides.json
@@ -21,9 +21,13 @@
 {"strongsId":"H0400","root":"אוכל","translation":"food"}
 {"strongsId":"H0402","root":"אכלה","translation":"food"}
 {"strongsId":"H0426","root":"אלה","translation":"Mighty One"}
+{"strongsId":"H0430","root":"אלוהימ","translation":"god","tokenType":"DISABLED"}
+{"strongsId":"H0430","root":"אלוהימ","translation":"god","tokenType":"DISABLED"}
 {"strongsId":"H0430","root":"אלה","translation":"Mighty One"}
 {"strongsId":"H0430","root":"אלוה","translation":"Mighty One"}
 {"strongsId":"H0433","root":"אלוה","translation":"Mighty One"}
+{"strongsId":"H0433","root":"אלהימ","translation":"Mighty Ones","tokenType":"DISABLED"}
+{"strongsId":"H0433","root":"אלוהימ","translation":"Mighty Ones","tokenType":"DISABLED"}
 {"strongsId":"H0518","root":"אמ","translation":"if"}
 {"strongsId":"H0559","root":"אמר","translation":"said"}
 {"strongsId":"H0559","root":"אמור","translation":"say"}
@@ -32,6 +36,7 @@
 {"strongsId":"H0595","root":"אנכי","translation":"I am"}
 {"strongsId":"H0624","root":"סיפ","translation":"threshold"}
 {"strongsId":"H0639","root":"אפ","translation":"nose"}
+{"strongsId":"H0644","root":"אופה","translation":"baker"}
 {"strongsId":"H0646","root":"אפד","translation":"ephod"}
 {"strongsId":"H0699","root":"ארבה","translation":"window"}
 {"strongsId":"H0758","root":"ארמ","translation":"Aram"}
@@ -133,6 +138,7 @@
 {"strongsId":"H2151","root":"זולל","translation":"glutton"}
 {"strongsId":"H2168","root":"זמור","translation":"prune"}
 {"strongsId":"H2181","root":"זנוה","translation":"harlot"}
+{"strongsId":"H2183","root":"זנונימ","translation":"adultery","tokenType":"DISABLED"}
 {"strongsId":"H2232","root":"זריע","translation":"sowing"}
 {"strongsId":"H2232","root":"זורע","translation":"sow"}
 {"strongsId":"H2236","root":"זורק","translation":"sprinkled"}
@@ -167,6 +173,8 @@
 {"strongsId":"H2873","root":"טבוח","translation":"killed"}
 {"strongsId":"H2903","root":"טטפת","translation":"frontlets"}
 {"strongsId":"H2921","root":"טלוא","translation":"spotted"}
+{"strongsId":"H2932","root":"טומאה","translation":"uncleanness"}
+{"strongsId":"H2932","root":"טימאה","translation":"uncleanness"}
 {"strongsId":"H2986","root":"ובל","translation":"carry"}
 {"strongsId":"H3004","root":"יבשה","translation":"dry land"}
 {"strongsId":"H3026","root":"יגר","translation":"Jegar"}
@@ -193,6 +201,7 @@
 {"strongsId":"H3220","root":"ימימ","translation":"seas"}
 {"strongsId":"H3221","root":"ימימ","translation":"seas"}
 {"strongsId":"H3222","root":"ימימ","translation":"seas"}
+{"strongsId":"H3225","root":"ימינ","translation":"right"}
 {"strongsId":"H3240","root":"יניח","translation":"left"}
 {"strongsId":"H3254","root":"ספ","translation":"again"}
 {"strongsId":"H3289","root":"יועצ","translation":"counselor"}
@@ -238,6 +247,7 @@
 {"strongsId":"H3707","root":"כעיס","translation":"anger"}
 {"strongsId":"H3742","root":"כרוב","translation":"cherub"}
 {"strongsId":"H3742","root":"כרב","translation":"cherub"}
+{"strongsId":"H3789","root":"כתוב","translation":"write"}
 {"strongsId":"H3794","root":"כתימ","translation":"Chittim"}
 {"strongsId":"H3801","root":"כתונ","translation":"garment"}
 {"strongsId":"H3801","root":"כתנ","translation":"garment"}
@@ -318,7 +328,6 @@
 {"strongsId":"H5140","root":"זל","translation":"flood"}
 {"strongsId":"H5140","root":"זיל","translation":"flowing"}
 {"strongsId":"H5144","root":"זיר","translation":"consecrate"}
-{"strongsId":"H5146","root":"נוח","translation":"Noah"}
 {"strongsId":"H5185","root":"הטי","translation":"incline"}
 {"strongsId":"H5186","root":"טה","translation":"prevert"}
 {"strongsId":"H5186","root":"נוטה","translation":"stretcher"}
@@ -362,6 +371,7 @@
 {"strongsId":"H5462","root":"סגיר","translation":"isolate"}
 {"strongsId":"H5462","root":"סוגר","translation":"shut"}
 {"strongsId":"H5467","root":"סדומ","translation":"Sodom"}
+{"strongsId":"H5493","root":"סיר","translation":"remove"}
 {"strongsId":"H5496","root":"סית","translation":"persuade"}
 {"strongsId":"H5526","root":"סכסכ","translation":"defend"}
 {"strongsId":"H5543","root":"סלוא","translation":"Sallu"}
@@ -405,8 +415,9 @@
 {"strongsId":"H5927","root":"מעלה","translation":"raise up"}
 {"strongsId":"H5937","root":"עלוז","translation":"rejoice"}
 {"strongsId":"H5973","root":"עמ","translation":"with"}
-{"strongsId":"H5975","root":"עמיד","translation":"stood"}
 {"strongsId":"H5975","root":"עומד","translation":"stand"}
+{"strongsId":"H5975","root":"עמוד","translation":"stood"}
+{"strongsId":"H5975","root":"עמיד","translation":"standing"}
 {"strongsId":"H6030","root":"עונה","translation":"answered"}
 {"strongsId":"H6059","root":"עניק","translation":"furnish"}
 {"strongsId":"H6064","root":"ענוש","translation":"punished"}
@@ -489,7 +500,7 @@
 {"strongsId":"H7200","root":"ראה","translation":"see"}
 {"strongsId":"H7200","root":"ראוה","translation":"saw"}
 {"strongsId":"H7200","root":"יראה","translation":"he see"}
-{"strongsId":"H7280","root":"רגיע","translation":"rest"}
+{"strongsId":"H7218","root":"רואש","translation":"head"}
 {"strongsId":"H7223","root":"ראשנ","translation":"first"}
 {"strongsId":"H7235","root":"רבו","translation":"multiply"}
 {"strongsId":"H7235","root":"ירב","translation":"let multiply"}
@@ -499,6 +510,7 @@
 {"strongsId":"H7257","root":"רביצ","translation":"laying"}
 {"strongsId":"H7264","root":"רגיז","translation":"tremble"}
 {"strongsId":"H7279","root":"רוגנ","translation":"murmurer"}
+{"strongsId":"H7280","root":"רגיע","translation":"rest"}
 {"strongsId":"H7287","root":"רדו","translation":"rule"}
 {"strongsId":"H7287","root":"רודה","translation":"rule"}
 {"strongsId":"H7291","root":"רדופ","translation":"pursue"}
@@ -542,6 +554,7 @@
 {"strongsId":"H8032","root":"שלשומ","translation":"times past"}
 {"strongsId":"H8034","root":"שמ","translation":"name"}
 {"strongsId":"H8034","root":"שמה","translation":"name of her"}
+{"strongsId":"H8040","root":"שמואל","translation":"left"}
 {"strongsId":"H8064","root":"שמימ","translation":"heavens"}
 {"strongsId":"H8085","root":"שמע","translation":"listen"}
 {"strongsId":"H8086","root":"שמע","translation":"listen"}
@@ -569,4 +582,5 @@
 {"strongsId":"H8435","root":"תולדה","translation":"generation"}
 {"strongsId":"H8449","root":"תר","translation":"turtledove"}
 {"strongsId":"H8478","root":"תחת","translation":"under"}
+{"strongsId":"H8551","root":"תמוכ","translation":"took hold"}
 {"strongsId":"H8591","root":"תעתע","translation":"deceiver"}
