Ability to download geez canon and sentence piece processing of Hebrew.

--- a/src/main/python/services/translation/files/heb_vocab_lexicon_ancient.json
+++ b/src/main/python/services/translation/files/heb_vocab_lexicon_ancient.json
@@ -223,7 +223,7 @@
 {"strongsId":"H0369","root":"אינ","translation":"except"}
 {"strongsId":"H0369","root":"IF","translation":"except"}
 {"strongsId":"H0370","root":"אינ","translation":"except"}
-{"strongsId":"H0370","root":"IF","translation":"except"}x
+{"strongsId":"H0370","root":"IF","translation":"except"}
 {"strongsId":"H0371","root":"אינ","translation":"except"}
 {"strongsId":"H0371","root":"IF","translation":"except"}
 {"strongsId":"H0374","root":"איפה","translation":"ephah"}
