--- a/src/main/python/services/translation/files/heb_vocab_overrides.json
+++ b/src/main/python/services/translation/files/heb_vocab_overrides.json
@@ -58,10 +58,10 @@
 {"strongsId":"H0853","root":"אתו","translation":"him"}
 {"strongsId":"H0853","root":"אתמ","translation":"them"}
 {"strongsId":"H0853","root":"אותמ","translation":"them"}
-{"strongsId":"H0853","word":"להמ","translation":"to them"}
-{"strongsId":"H0853","word":"לכ","translation":"for yourself"}
-{"strongsId":"H0853","word":"לכמ","translation":"to them"}
-{"strongsId":"H0853","word":"בכ","translation":"in of you"}
+{"strongsId":"H0853","root":"להמ","translation":"to them"}
+{"strongsId":"H0853","root":"לכ","translation":"for yourself"}
+{"strongsId":"H0853","root":"לכמ","translation":"to them"}
+{"strongsId":"H0853","root":"בכ","translation":"in of you"}
 {"strongsId":"H0854","root":"את","translation":"you"}
 {"strongsId":"H0854","root":"אתי","translation":"with me"}
 {"strongsId":"H0859","root":"אתמ","translation":"them"}
