--- a/src/main/python/services/translation/files/heb_vocab_prefixes.json
+++ b/src/main/python/services/translation/files/heb_vocab_prefixes.json
@@ -1,33 +1,33 @@
 *** Prefixes ***
-{"translation":"I ","word":"א","tokenType":"PREFIX_ONLY"}
-{"translation":"in ","word":"ב","tokenType":"PREFIX_ONLY"}
-{"translation":"the ","word":"ה","tokenType":"PREFIX","asSuffix":""}
-{"translation":"and ","word":"ו","tokenType":"PREFIX","asSuffix":" of him"}
-{"translation":"he ","word":"י","tokenType":"PREFIX","asSuffix":"s of"}
-{"translation":"like ","word":"כ","tokenType":"PREFIX","asSuffix":" of you"}
-{"translation":"to ","word":"ל","tokenType":"PREFIX_ONLY"}
-{"translation":"from ","word":"מ","tokenType":"PREFIX","asSuffix":"s"}
-{"translation":"we ","word":"נ","tokenType":"PREFIX","asSuffix":" us"}
-{"translation":"that which ","word":"ש","tokenType":"PREFIX_ONLY"}
-{"translation":"you ","word":"ת","tokenType":"PREFIX","asSuffix":"s"}
+{"translation":"I ","root":"א","tokenType":"PREFIX_ONLY"}
+{"translation":"in ","root":"ב","tokenType":"PREFIX_ONLY"}
+{"translation":"the ","root":"ה","tokenType":"PREFIX","asSuffix":""}
+{"translation":"and ","root":"ו","tokenType":"PREFIX","asSuffix":" of him"}
+{"translation":"he ","root":"י","tokenType":"PREFIX","asSuffix":"s of"}
+{"translation":"like ","root":"כ","tokenType":"PREFIX","asSuffix":" of you"}
+{"translation":"to ","root":"ל","tokenType":"PREFIX_ONLY"}
+{"translation":"from ","root":"מ","tokenType":"PREFIX","asSuffix":"s"}
+{"translation":"we ","root":"נ","tokenType":"PREFIX","asSuffix":" us"}
+{"translation":"that which ","root":"ש","tokenType":"PREFIX_ONLY"}
+{"translation":"you ","root":"ת","tokenType":"PREFIX","asSuffix":"s"}
 *** Suffixes ***
-{"translation":"s","word":"ימ","tokenType":"SUFFIX_ONLY"}
-{"translation":"s","word":"ית","tokenType":"SUFFIX_ONLY"}
-{"translation":"s","word":"ות","tokenType":"SUFFIX_ONLY"}
-{"translation":"s of him","word":"תו","tokenType":"SUFFIX_ONLY"}
-{"translation":"s of you","word":"תכ","tokenType":"SUFFIX_ONLY"}
-{"translation":"them","word":"המ","tokenType":"SUFFIX","asSuffix":" of them"}
-{"translation":"them","word":"תמ","tokenType":"SUFFIX","asSuffix":"s"}
-** {"translation":"them","word":"כמ","tokenType":"SUFFIX","asSuffix":" of y'all"}
-{"translation":"of us","word":"נו","tokenType":"SUFFIX","asSuffix":" of us"}
-{"translation":"and we ","word":"ונ","tokenType":"PREFIX","asSuffix":" of it"}
-{"translation":"it ","word":"נה","tokenType":"PREFIX","asSuffix":" of it"}
-{"translation":"","word":"הו","tokenType":"SUFFIX_ONLY","asSuffix":" of it"}
-{"translation":" of you","word":"כ","tokenType":"SUFFIX_ONLY"}
-{"translation":"s of you","word":"יכ","tokenType":"SUFFIX_ONLY"}
-{"translation":"to him","word":"לו","tokenType":"PREFIX"}
-{"translation":" of him","word":"יו","tokenType":"SUFFIX_ONLY"}
+{"translation":"s","root":"ימ","tokenType":"SUFFIX_ONLY"}
+{"translation":"s","root":"ית","tokenType":"SUFFIX_ONLY"}
+{"translation":"s","root":"ות","tokenType":"SUFFIX_ONLY"}
+{"translation":"s of him","root":"תו","tokenType":"SUFFIX_ONLY"}
+{"translation":"s of you","root":"תכ","tokenType":"SUFFIX_ONLY"}
+{"translation":"them","root":"המ","tokenType":"SUFFIX","asSuffix":" of them"}
+{"translation":"them","root":"תמ","tokenType":"SUFFIX","asSuffix":"s"}
+** {"translation":"them","root":"כמ","tokenType":"SUFFIX","asSuffix":" of y'all"}
+{"translation":"of us","root":"נו","tokenType":"SUFFIX","asSuffix":" of us"}
+{"translation":"and we ","root":"ונ","tokenType":"PREFIX","asSuffix":" of it"}
+{"translation":"it ","root":"נה","tokenType":"PREFIX","asSuffix":" of it"}
+{"translation":"","root":"הו","tokenType":"SUFFIX_ONLY","asSuffix":" of it"}
+{"translation":" of you","root":"כ","tokenType":"SUFFIX_ONLY"}
+{"translation":"s of you","root":"יכ","tokenType":"SUFFIX_ONLY"}
+{"translation":"to him","root":"לו","tokenType":"PREFIX"}
+{"translation":" of him","root":"יו","tokenType":"SUFFIX_ONLY"}
 ** Supp words
-{"translation":"in","word":"בה"}
-{"translation":"in it","word":"בו"}
-{"translation":"for me","word":"לי"}
+{"translation":"in","root":"בה"}
+{"translation":"in it","root":"בו"}
+{"translation":"for me","root":"לי"}
