New language processing steps.

--- a/src/main/python/services/translation/files/gk_vocab_overrides.json
+++ b/src/main/python/services/translation/files/gk_vocab_overrides.json
@@ -18,6 +18,7 @@
 {"strongsId":"G1380","translation":"think","root":"δοκω"}
 {"strongsId":"G1510","translation":"to be","root":"εστιν"}
 {"strongsId":"G1520","translation":"one","root":"μιαν"}
+{"strongsId":"G1532","translation":"out of","root":"εξ"}
 {"strongsId":"G1646","translation":"least","root":"ελαχιστων"}
 {"strongsId":"G1699","translation":"my","root":"εμην"}
 {"strongsId":"G1785","translation":"commandments","root":"εντολων"}
