More DSS verification work.

--- a/src/main/python/services/translation/files/gk_vocab_overrides.json
+++ b/src/main/python/services/translation/files/gk_vocab_overrides.json
@@ -23,6 +23,8 @@
 {"strongsId":"G1699","translation":"my","root":"εμην"}
 {"strongsId":"G1785","translation":"commandments","root":"εντολων"}
 {"strongsId":"G2064","translation":"I have come","root":"ηλθον"}
+{"strongsId":"G2316","translation":"God","root":"Θεον"}
+{"strongsId":"G2316","translation":"god","root":"Θεος"}
 {"strongsId":"G2523","translation":"having sat down","root":"καθισαντος"}
 {"strongsId":"G2564","translation":"is called","root":"κληθησεται"}
 {"strongsId":"G2647","translation":"to abolish","root":"καταλυσαι"}
