--- a/src/main/python/services/translation/files/heb_vocab_overrides.json
+++ b/src/main/python/services/translation/files/heb_vocab_overrides.json
@@ -297,6 +297,7 @@
 {"strongsId":"H4305","root":"מטיר","translation":"rain"}
 {"strongsId":"H6327","root":"פיצ","translation":"scatter"}
 {"strongsId":"H4325","root":"מימ","translation":"waters"}
+{"strongsId":"H4390","root":"מלאת","translation":"full"}
 {"strongsId":"H4399","root":"מלאכת","translation":"work"}
 {"strongsId":"H4402","root":"מלאת","translation":"fulness"}
 {"strongsId":"H4427","root":"מלכ","translation":"king"}
