Changes for distributed verification.

--- a/src/main/python/services/translation/files/heb_vocab_overrides.json
+++ b/src/main/python/services/translation/files/heb_vocab_overrides.json
@@ -492,6 +492,7 @@
 {"strongsId":"H6960","root":"יקוו","translation":"let be gathered"}
 {"strongsId":"H6963","root":"קל","translation":"voice"}
 {"strongsId":"H6965","root":"קמ","translation":"up"}
+{"strongsId":"H6965","root":"קימ","translation":"uping"}
 {"strongsId":"H6982","root":"קרה","translation":"roof"}
 {"strongsId":"H6996","root":"קטונ","translation":"lesser"}
 {"strongsId":"H6999","root":"קטיר","translation":"burn"}
